Sun Oct  5 04:10:00 2003  Nathaniel Talbott  <ntalbott@ruby-lang.org>

	* lib/test/unit/assertions.rb: refactored message building.

Sun Oct  5 03:40:22 2003  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_asn1.h: global symbols should be declared
	  as external.

Sun Oct  5 03:03:20 2003  akira yamada  <akira@ruby-lang.org>

	* test/ruby/test_exception.rb (test_else): added.

Sun Oct  5 02:12:00 2003  Nathaniel Talbott  <ntalbott@ruby-lang.org>

	* lib/test/unit/assertions.rb: changed assertion messages to rely more
	  heavily on #inspect. Added backtrace filtering for exceptions in
	  assertion messages.

	* test/testunit/test_assertions.rb: ditto.

Sun Oct  5 02:12:00 2003  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/acl.rb, lib/drb/ssl.rb: added.

	* lib/drb/drb.rb: exit from a thread using 'break'.

Sat Oct  4 21:49:14 2003  WATANABE Hirofumi  <eban@ruby-lang.org>

	* gc.c (Init_stack): the type of space is changed to unsigned int
	  from double.  [ruby-dev:21483]

Sat Oct  4 17:52:59 2003  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* lib/soap/netHttpClient.rb: follow http-access2.  hosts which matches
	  ENV['no_proxy'] or ENV['NO_PROXY'] is not proxyed.
	  - [,:] separated. ("ruby-lang.org:rubyist.net")
	  - no regexp. (give "ruby-lang.org", not "*.ruby-lang.org")
	  - if you want specify hot by IP address, give full address.
	    ("192.168.1.1, 192.168.1.2")

	* lib/soap/rpc/cgistub.rb: return "Status: XXX MMM" line.

	* test/runner.rb: give testsuite name.

Sat Oct  4 15:16:02 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* marshal.c (w_object): instance variable dump do not cause error
	  for objects that cannot be dumped, if they traversed from
	  marshal_dump.  they are just ignored.

	* gc.c (Init_stack): cast "space" (doble value) into unsigned
	  int.  should run on PowerPC.

	* eval.c (rb_eval): should not execute else part if any exception
	  is caught. [ruby-dev:21482]
