@@ -1,3 +1,13 @@
+Sun Oct  5 :00 2003  Nathaniel Talbott  <ntalbott@ruby-lang.org>
+
+	* lib/test/unit/assertions.rb: made small improvements to assertion
+	  messages. Deprecated Assertions#assert_not_nil; use #assert instead.
+
+	* test/testunit/test_assertions.rb: ditto.
+
+	* test/testunit/util/test_procwrapper.rb: use #assert instead of
+	  #assert_not_nil.
+
 Sun Oct  5 04:10:00 2003  Nathaniel Talbott  <ntalbott@ruby-lang.org>
 
 	* lib/test/unit/assertions.rb: refactored message building.
